[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigaam"
version = "0.1.0"
description = "GigaAM: A package for audio modeling and ASR."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GigaChat Team"},
]
keywords = ["asr", "speech-recognition", "audio", "gigaam", "onnx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "hydra-core>=1.3",
    "numpy>=1.24,<3.0",
    "omegaconf>=2.3",
    "onnx>=1.19",
    "onnxruntime>=1.24",
    "soundfile>=0.12",
    "sentencepiece>=0.2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
torch = [
    "torch>=2.6",
    "torchaudio>=2.6",
]
longform = [
    "numba>=0.62",
    "pyannote.audio>=3.3,<5.0",
    "pyarrow>=14.0",
    "torch>=2.4",
    "torchaudio>=2.4",
    "torchcodec>=0.10",
    "transformers>=4.40,<6.0",
]
train = [
    "editdistance>=0.8",
    "lightning>=2.6",
    "tensorboard>=2.20",
    "wandb>=0.25",
]
tests = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "scipy>=1.11",
]
lint = [
    "black>=26.0",
    "isort>=7.0",
    "flake8>=7.0",
    "mypy>=1.8",
    "types-requests>=2.31",
]
dev = [
    "gigaam[tests,lint,train]",
]
all = [
    "gigaam[torch,longform,train,tests,lint]",
]

[project.urls]
Homepage = "https://github.com/salute-developers/GigaAM/"
Repository = "https://github.com/salute-developers/GigaAM/"
Issues = "https://github.com/salute-developers/GigaAM/issues"
Documentation = "https://github.com/salute-developers/GigaAM#readme"

[tool.setuptools]
packages = {find = {include = ["gigaam*"], exclude = ["tests*", "docs*", "examples*"]}}

[tool.black]
line-length = 88
# target-version автоматически определяется из project.requires-python

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=gigaam --cov-report=term-missing"
testpaths = ["tests"]
